name: HChem
version: 0.3
cabal-version: >=1.2
build-type: Simple
license: GPL-3
license-file: LICENSE
homepage: https://github.com/sheepforce/HChem
synopsis: Handling chemical formats
category: Chemistry
author: Phillip Seeber

executable hchem
    main-is: hchem.hs
    build-depends:
        base -any,
        attoparsec -any,
        HChem-libs >= 0.4,
        text -any,
        either-unwrap -any,
        hmatrix >=0.18
    hs-source-dirs: src
    ghc-options: -Wall -O2
